/*
 * Copyright (C) 2019 The Android Open Source Project
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
 syntax = "proto3";

package test.screenshot.proto;
option java_package = "androidx.test.screenshot.proto";
option java_outer_classname = "ScreenshotResultProto";

message ScreenshotResult {
  enum Status {
    UNSPECIFIED = 0;
    PASSED = 1;
    FAILED = 2;
    MISSING_GOLDEN = 3;
    SIZE_MISMATCH = 4;
  }

  Status result = 1;

  /**
   * Name of the screenshot artifact taken during the test.
   */
  string current_screenshot_file_name = 2;

  /**
   * Name of the expected/golden image that `current_screenshot_file_name` was compared to, can be
   * empty if no expected/golden exists
   */
  string expected_image_file_name = 3;

  /**
   * Name of the image containing the diff between `current_screenshot_file_name` and
   * `expected_image_file_name`, can be empty if no golden was generated yet
   */
  string diff_image_file_name = 4;

  /**
   * Detailed output from the comparator that was used to compare the images.
   */
  string comparison_statistics = 5;

  /**
   * Path to the root of the repository that contains the golden images
   */
  string repo_root_path = 6;

  /**
   * Path (relative to `repo_root_path`) used for storing the golden images, this is the image that
   * should be retrieved, compared to `current_screenshot_file_name` and output as
   * `expected_image_file_name`, this is also the image that will be updated when the golden needs
   * to be updated
   */
  string location_of_golden_in_repo = 7;
}

